# server-fastapi

./: .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: absence.py  academic.py  attendance.py  auth.py  meeting.py  membership.py  profile.py  user.py  user_attendance.py
app/api/attendance/: __init__.py  attendance.py  user.py
app/api/user/: __init__.py  attendance.py  user.py
app/constant/: user.py
app/context/: absence.py  academic.py  attendance.py  attendance_member.py  base.py  meeting.py  membership.py  profile.py  user.py  user_attendance.py
app/core/: config.py  database.py  fastapi.py  routing.py  security.py
app/database/: base.py  mysql.py  sqlite.py  url.py
app/dto/: absence.py  academic.py  attendance.py  attendance_member.py  auth.py  base.py  meeting.py  membership.py  profile.py  user.py  user_attendance.py
app/entity/: absence.py  academic.py  attendance.py  attendance_member.py  base.py  meeting.py  membership.py  profile.py  user.py  user_attendance.py
app/repository/: absence.py  academic.py  attendance.py  attendance_member.py  base.py  meeting.py  membership.py  profile.py  user.py  user_attendance.py
app/service/: absence.py  academic.py  attendance.py  attendance_member.py  auth.py  base.py  meeting.py  membership.py  profile.py  user.py  user_attendance.py
app/utils/type_utils/: __init__.py  type_hint_resolver.py
tests/unit/: test_context.py  test_database_session.py  test_model_convert.py
